adding id to title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to  our web</h1>
+    <h1 id="title">Welcome to  our web</h1>
     <div class="container">
         <div class="register-form">
             <label for="dates"><small>Name</small></label>
