made  some form to hide during sign in

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1 id="title">Welcome to  our web</h1>
     <div class="container">
-        <div class="register-form">
+        <div class="register-form" id="reg-form">
             <label for="dates"><small>Name</small></label>
             <input id="name" type="text" placeholder="Enter your full Name">
         </div>
-        <div class="register-form">
+        <div class="register-form" id="username">
             <label for="text"><small>Date</small></label>
             <input id="username" type="text" placeholder="enter your user name"   >
         </div>
@@ -28,7 +28,7 @@
             <label for="password"><small>password</small></label>
             <input id="password" type="password" name="password" placeholder="password" >
         </div>
-        <div class="register-form">
+        <div class="register-form" id="date">
            <label for="dates"><small>Date  birth </small></label>
             <input type="date" name="dates"  >
             
