add experssion to email form

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="register-form" id="reg-form">
             <label for="dates"><small>Name</small></label>
-            <input id="name" type="text" placeholder="Enter your full Name">
+            <input id="name" type="text" placeholder="Enter your full Name" required>
         </div>
         <div class="register-form" id="username">
             <label for="text"><small>Date</small></label>
