some midfication in prime age function

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             <p id="output">check the the word is palindrom or not type down and submit to see resualt</p>
             <input type="text" id="palindrom">
             <button id="check-button">submit</button>
+            <p id="birth-year">To check if your age is prime or even enter down your birth-year</p>
+            <input type="text" id="user_age"> click out to see result>
         </div>
         
       </div>
