--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
         </form>
          
-        <div id="mergsort">
+        <div id="function">
 
             <p> hello guys if u want to try mergSort using ten 10 feel free to touch the button</p>
             <button onclick="runMergeSort()">mergsort</button>
