added class course using js

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         </div>
         <div class="form_2">
         <form class="form2">
-            <div><input type="text" id="text-form-2" placeholder="name of course" required></div>
-            <div> <input type="text" id="number-form-2" placeholder="enter code of course" required></div>
-            <div> <input type="text" id="instructor-form-2" placeholder="enter instructor name"required></div>
-            <div> <input type="time" id="time-form-2" placeholder="enter time of the course"required></div>
-             <div>    <button type="submit">sumbit</button></div>
+            <div><input type="text" id="course_name" placeholder="name of course" required></div>
+            <div> <input type="number" id="course_code" placeholder="enter code of course" required></div>
+            <div> <input type="text" id="instructor_name" placeholder="enter instructor name"required></div>
+            <div> <input type="time" id="course_time" placeholder="enter time of the course"required></div>
+             <div>    <button id="submit_form2" type="submit">sumbit</button></div>
         </form>
     </div>
       </div>
