user string first layout

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
              <div>    <button id="submit_form2" type="submit">sumbit</button></div>
         </form>
     </div>
+    <div class="function-2">
+        <input type="text" id="reverse-word" placeholder="enter word to reveser it" >
+        <p id="rev-word-output"> reverse-word will appear her  after clicking out</p>
+    </div>
       </div>
     <script src="js.js"></script>
 </body>
