--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
     </div>
     <div class="function-2">
         <input type="text" id="reverse-word" placeholder="enter word to reveser it" >
-        <p id="rev-word-output"> reverse-word will appear her  after clicking out</p>
+        <p id="rev-word-output"> reverse-word will appear here  after clicking out</p>
+        <input type="text" id="ay-word" placeholder="enter word add to last of it ay plus first letter" >
+        <p id="ay-word-output"> reverse-word will appear here  after clicking out</p>
+        
     </div>
       </div>
     <script src="js.js"></script>
