add blur effect in ay function

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <input type="text" id="reverse-word" placeholder="enter word to reveser it" >
         <p id="rev-word-output"> reverse-word will appear here  after clicking out</p>
         <input type="text" id="ay-word" placeholder="enter word add to last of it ay plus first letter" >
-        <p id="ay-word-output"> reverse-word will appear here  after clicking out</p>
+        <p id="ay-word-output"> ay world </p>
         
     </div>
       </div>
