styling for page 3

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </div>
         <div class="form_2">
         <form class="form2">
+            <div><h1> Fill the  Course Form</h1></div>
             <div><input type="text" id="course_name" placeholder="name of course" required></div>
             <div> <input type="number" id="course_code" placeholder="enter code of course" required></div>
             <div> <input type="text" id="instructor_name" placeholder="enter instructor name"required></div>
