--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
         </form>
     </div>
     <div class="function-2">
-        <input type="text" id="reverse-word" placeholder="enter word to reveser it" >
-        <p id="rev-word-output"> reverse-word will appear here  after clicking out</p>
-        <input type="text" id="ay-word" placeholder="enter word add to last of it ay plus first letter" >
-        <p id="ay-word-output"> ay world </p>
-        
+          <div><h1>WANT TO HAVE SOME FUN</h1></div>
+        <div><input type="text" id="reverse-word" placeholder="enter word to reveser it" >
+            <p id="rev-word-output"> reverse-word will appear here  after clicking out</p></div>
+        <div><input type="text" id="ay-word" placeholder="enter word add to last of it ay plus first letter" >
+            <p id="ay-word-output"> Put  any text so u can see it in funny way,click out </p>
+            </div>
     </div>
       </div>
     <script src="js.js"></script>
