added ball animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     
     <div class="start"> 
-     <div class="first-page"> 
+        <div id="ball"><h2>trust the process  FSW</h2></div>
+     <div class="first-page">  
         <h1 id="title">Welcome To j-Web</h1>
     <form class="container" id="myform">
         <div class="register-form" id="reg-form">
@@ -78,6 +79,7 @@
             <p id="rev-word-output"> reverse-word will appear here  after clicking out</p></div>
         <div><input type="text" id="ay-word" placeholder="enter word add to last of it ay plus first letter" >
             <p id="ay-word-output"> Put  any text so u can see it in funny way,click out </p>
+            
             </div>
     </div>
       </div>
