add event to ip address

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <p id="rev-word-output"> reverse-word will appear here  after clicking out</p></div>
         <div><input type="text" id="ay-word" placeholder="enter word add to last of it ay plus first letter" >
             <p id="ay-word-output"> Put  any text so u can see it in funny way,click out </p>
-            <div><button id="ip"> get ip address</button></div>
-                <p id="ip-adress"> Put  any text so u can see it in funny way,click out </p>
+            <div><button id="ip"> get ip address &evensum  </button></div>
+                 <p id="ip-adress">  </p>
             </div>
             <div><button  id="go-to-page1" onclick="goToFirstPage()">Go to First Page</button></div>
     </div>
