--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
             </div>
             <div><button  id="go-to-page1" onclick="goToFirstPage()">Go to First Page</button></div>
     </div>
+    <div>
+        <div><button onclick="getLocation()">Get Location</button></div><h3 id="demo">h</h3></div>
       </div>
     <script src="js.js"></script>
+      
 </body>
 </html>
