--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
             </div>
             <div><button  id="go-to-page1" onclick="goToFirstPage()">Go to First Page</button></div>
     </div>
-    <div>
+     <div class="private-section">
+       <div><h1>Private Section</h1></div> 
+    ,<div><h3 id="location"></h3></div>
+     </div>
         
       </div>
     <script src="js.js"></script>
