--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
             </div>
             <div><button  id="go-to-page1" onclick="goToFirstPage()">Go to First Page</button></div>
     </div>
+    <div><h1 id="private">Private Section</h1></div> 
      <div class="private-section">
-       <div><h1>Private Section</h1></div> 
+       
     ,<div><h3 id="location"></h3></div>
+    <div><button  id="go-to-page1" onclick="goToFirstPage()">Go to First Page</button></div>
      </div>
         
       </div>
