--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
            
             <div>
-                <p> hello guys if u want to try mergSort using ten 10 feel free to touch the button</p>
+                <p> hello guys if u want to try Merg-Sort using ten numbers feel free to touch the button</p>
                 <button onclick="runMergeSort()">mergsort</button></div>
             <div><p id="output">check the the word is palindrom or not type down and submit to see resualt</p>
                 <input type="text" id="palindrom">
